fix navbar collapsing lick

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,113 +48,10 @@ footer {
  */
 @import "components.blog";
 @import "components.featurette";
+@import "components.header";
 @import "components.iconic";
 @import "components.team";
 
-.nls-phil-header {
-  .show + .navbar {
-    .navbar-brand {
-      opacity: 0;
-    }
-  }
-
-  .navbar-brand {
-    transition: all 180ms;
-  }
-
-  &-collapse {
-    &-menu {
-      opacity: 0;
-      transition: all 800ms;
-    }
-
-    ul {
-      li {
-        margin-bottom: 0.2rem;
-
-        a {
-          display: block;
-          border: 1px solid $gray;
-          padding: 0.5rem 1rem;
-          border-radius: $border-radius;
-          font-family: $font-family-serif;
-          transition: transform 500ms, opacity 400ms;
-          transform: translateY(6rem);
-          opacity: 0;
-
-          &:focus,
-          &:hover {
-            border-color: $gray-light;
-            text-decoration: none;
-          }
-        }
-
-        &:nth-child(0) {
-          a {
-            transition-delay: 0;
-          }
-        }
-
-        &:nth-child(1) {
-          a {
-            transition-delay: 100ms;
-          }
-        }
-
-        &:nth-child(2) {
-          a {
-            transition-delay: 200ms;
-          }
-        }
-
-        &:nth-child(3) {
-          a {
-            transition-delay: 300ms;
-          }
-        }
-
-        &:nth-child(4) {
-          a {
-            transition-delay: 400ms;
-          }
-        }
-
-        &:nth-child(5) {
-          a {
-            transition-delay: 500ms;
-          }
-        }
-
-        &:nth-child(6) {
-          a {
-            transition-delay: 600ms;
-          }
-        }
-
-        &:nth-child(7) {
-          a {
-            transition-delay: 700ms;
-          }
-        }
-      }
-    }
-
-    &.show {
-      .nls-phil-header-collapse-menu {
-        opacity: 1;
-      }
-
-      ul {
-        li {
-          a {
-            transform: translateY(0);
-            opacity: 1;
-          }
-        }
-      }
-    }
-  }
-}
 /*----------------------------------------------------------------
  * Overrides
  *----------------------------------------------------------------
